--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(187, 212, 135);
+}
+.logo {
+  margin-right: 1rem;
+  color: rgb(84, 141, 112);
+  font-size: 1.5rem;
+}
+
+.total-count {
+  padding: 1rem;
+  border: 1px solid transparent;
+  color: white;
+  font-size: 1.2rem;
+  border-radius: 50%;
+  width: 0.5rem;
+  height: 0.5rem;
+  text-align: center;
+  display: inline-block;
+  line-height: 0.5rem;
+  margin-left: 0.5rem;
+  background-color: rgb(150, 223, 195);
+}
+.title {
+  color: rgb(84, 141, 112);
+}
+
+.add-form {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.habit {
+  font-size: 2rem;
+  list-style: none;
+  margin: auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.habit-name {
+  margin-left: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.habit-count {
+  margin-left: 0.5rem;
+  border: 1px solid black;
+  display: inline-block;
+  border: 0;
+  width: 2.5rem;
+  height: 2.5rem;
+  line-height: 2.5rem;
   color: white;
+  background-color: rgb(150, 223, 195);
+  text-align: center;
+  border-radius: 50%;
 }
 
-.App-link {
-  color: #61dafb;
+.habit-button {
+  margin-left: 0.25rem;
+
+  font-size: 1.7rem;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  color: goldenrod;
+  transition: all 300ms ease;
+}
+.habit-button:hover {
+  transform: scale(1.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.habit-button.habit-delete {
+  color: red;
+}
+
+.habit-reset {
+  text-align: center;
+  display: flex;
+  margin: auto;
+  background-color: rgb(187, 212, 135);
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.habit-reset:hover {
+  transform: scale(1.2);
 }
